--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Banner 轮播 JQuery插件；\r 支持响应式；\r 插件由 webpack 打包；\r 使用 gulp 处理工作流。",
   "main": "gulpfile.js",
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^3.1.1"
+  },
   "devDependencies": {
     "css-loader": "^0.23.1",
     "gulp": "^3.9.1",
