--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "jquery": "^3.1.1"
   },
   "devDependencies": {
+    "browser-sync": "^2.16.0",
     "css-loader": "^0.23.1",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-debug": "^2.1.2",
+    "gulp-less": "^3.1.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   },
